# music-archiver

./: .gitignore  README.md  pyproject.toml
music_archiver/cli/: main.py
music_archiver/core/: models.py  pipeline.py
music_archiver/importers/: base.py  spotify_json.py
music_archiver/providers/: base.py  youtube.py
music_archiver/storage/: filesystem.py
music_archiver/utils/: sanitize.py
