[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "music-archiver"
version = "0.1.0"
description = "Archive your Spotify playlists as local audio files via YouTube."
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
]

[project.scripts]
music-archiver = "music_archiver.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
